<resources>
    <string name="app_name">QuizAppAK</string>
    <string name="title">World Knowledge Quiz</string>
    <string name="question_1">" Q1. How many countries are there in the world?  "</string>
    <string name="question_1_a">" 215 "</string>
    <string name="question_1_b">" 195 "</string>
    <string name="question_1_c">" 177 "</string>
    <string name="question_1_d">" 202 "</string>
    <string name="question_2">" Q2. Which continent has the most countries?  "</string>
    <string name="question_2_a">Africa</string>
    <string name="question_2_b">Asia</string>
    <string name="question_2_c">Europe</string>
    <string name="question_2_d">Oceania</string>
    <string name="question_3">" Q3. Select two countries with the most population in the world. "</string>
    <string name="question_3_a">" Algeria "</string>
    <string name="question_3_b">" China "</string>
    <string name="question_3_c">" India "</string>
    <string name="question_3_d">" Indonesia "</string>
    <string name="question_4">" Q4. Name the second continent with the most countries:  "</string>
    <string name="question_4_a">" 6 "</string>
    <string name="question_4_b">" 4 "</string>
    <string name="question_4_c">" 5 "</string>
    <string name="question_4_d">" 7 "</string>
    <string name="question_5">How many countries are there in Europe?</string>
    <string name="question_5_a"></string>
    <string name="question_5_b"></string>
    <string name="question_5_c"></string>
    <string name="question_5_d"></string>
    <string name="question_6">How many countries are there in Asia?</string>
    <string name="question_6_a"></string>
    <string name="question_6_b"></string>
    <string name="question_6_c"></string>
    <string name="question_6_d"></string>
    <string name="question_7">How many countries are there in Africa</string>
    <string name="question_7_a"></string>
    <string name="question_7_b"></string>
    <string name="question_7_c"></string>
    <string name="question_7_d"></string>
    <string name="question_8">How many countries in Latin America and the Caribbean?</string>
    <string name="question_8_a"></string>
    <string name="question_8_b"></string>
    <string name="question_8_c"></string>
    <string name="question_8_d"></string>
    <string name="question_9">How many countries are there in Oceania?</string>
    <string name="question_9_a"></string>
    <string name="question_9_b"></string>
    <string name="question_9_c"></string>
    <string name="question_9_d"></string>
    <string name="question_10">How many countries are there in North America?</string>
    <string name="question_10_a"></string>
    <string name="question_10_b"></string>
    <string name="question_10_c"></string>
    <string name="question_10_d"></string>
    <string name="hintContinent"> Name the continent: </string>
    <string name="submitAnswers">Submit Answers</string>
    <string name="start_quiz">Start The Quiz</string>
</resources>
